@@ -136,7 +136,6 @@ extern struct Battle_Config {
 	unsigned short atc_slave_clone_limit;
 	unsigned short partial_name_scan;
 	unsigned short gm_allskill;
-	unsigned short gm_allskill_addabra;
 	unsigned short gm_allequip;
 	unsigned short gm_skilluncond;
 	unsigned short gm_join_chat;
