@@ -1,5 +1,7 @@
 Date	Added
 
+2006/10/06
+	* Removed gm_all_skill_add_abra which was doing nothing anyway. [Skotlex]
 2006/10/03
 	* Renamed setting delay_dependon_dex to delay_dependon_agi, the delay of
 	  skills is reduced now (when enabled) by AGI instead of DEX, which makes a
